--- a/docker-compose-db.yaml
+++ b/docker-compose-db.yaml
@@ -1,22 +1,20 @@
+version: "3.8"
+
 services:
-  mongo:
-    image: mongo:7
+  mongo-db:
+    image: mongo
     container_name: mongodb
-    ports:
-      - "27017:27017"
-    env_file:
-      - .env
     volumes:
       - ./lib/mongodb:/data/db
-    restart: unless-stopped
+      - ./lib/mongodb/logs:/var/log/mongodb
+    env_file:
+      - .env
+    ports:
+      - "27017:27017"
     networks:
       - backend_net
+    restart: unless-stopped
     user: "0:0"
-    healthcheck:
-      test: ["CMD", "mongosh", "--quiet", "--eval", "db.adminCommand('ping').ok"]
-      interval: 10s
-      timeout: 5s
-      retries: 10
 
 networks:
   backend_net:
