--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ email_validator==2.2.0
 fastapi==0.116.1
 h11==0.16.0
 httpcore==1.0.9
+httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 imagesize==1.4.1
@@ -33,6 +34,7 @@ pymongo==4.13.2
 python-dotenv==1.1.1
 python-keycloak==5.7.0
 pytz==2025.2
+PyYAML==6.0.2
 requests==2.32.4
 requests-toolbelt==1.0.0
 roman-numerals-py==3.1.0
@@ -50,4 +52,6 @@ typing-inspection==0.4.1
 typing_extensions==4.14.1
 urllib3==2.5.0
 uvicorn==0.35.0
+uvloop==0.21.0
+watchfiles==1.1.0
 websockets==15.0.1
